--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "2.0.0-rc.5",
     "@angular/router": "3.0.0-rc.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.4",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.0",
     "jquery": "^2.2.4",
