--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.5",
     "@angular/router": "3.0.0-rc.1",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.5",
+    "angular2-fontawesome": "^0.5.1",
     "bootstrap": "^4.0.0-alpha.4",
     "core-js": "^2.4.0",
     "jquery": "^2.2.4",
