--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.0.0-alpha.4",
     "core-js": "^2.4.0",
     "jquery": "^2.2.4",
+    "linq-es5": "^1.11.2",
     "ng2-nvd3": "^1.1.3",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
