--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "angular2-fontawesome": "^0.5.1",
     "bootstrap": "^4.0.0-alpha.4",
     "core-js": "^2.4.0",
+    "dagre": "^0.7.4",
+    "dagre-d3": "^0.4.17",
     "jquery": "^2.2.4",
     "linq-es5": "^1.11.2",
     "ng2-nvd3": "^1.1.3",
