--- a/package.json
+++ b/package.json
@@ -26,49 +26,59 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.5",
     "angular2-fontawesome": "^0.5.1",
     "bootstrap": "^4.0.0-alpha.4",
+    "codelyzer": "0.0.28",
+    "concurrently": "^3.1.0",
     "core-js": "^2.4.0",
+    "css-loader": "^0.25.0",
     "dagre": "^0.7.4",
     "dagre-d3": "^0.4.17",
+    "file-loader": "^0.9.0",
     "jquery": "^2.2.4",
+    "karma": "^1.3.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-junit-reporter": "^2.0.0",
     "linq-es5": "^1.11.2",
     "ng2-nvd3": "^1.1.3",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
+    "ts-loader": "^0.9.4",
+    "typescript": "^2.0.3",
+    "webpack-merge": "^0.15.0",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "codelyzer": "0.0.19",
-    "concurrently": "^2.0.0",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "gulp": "^3.9.1",
-    "gulp-load-plugins": "^1.2.4",
-    "gulp-shell": "^0.5.2",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.15.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-coverage": "^1.0.0",
-    "karma-coveralls": "^1.1.2",
-    "karma-jasmine": "^0.3.8",
-    "karma-junit-reporter": "^1.1.0",
-    "karma-mocha-reporter": "^2.0.4",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
-    "null-loader": "^0.1.1",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.5.2",
-    "run-sequence": "^1.2.2",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^0.8.1",
-    "tslint": "^3.13.0",
-    "typescript": "^1.8.10",
-    "typings": "^1.3.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.14.0"
+    "codelyzer": "*",
+    "concurrently": "*",
+    "css-loader": "*",
+    "extract-text-webpack-plugin": "*",
+    "file-loader": "*",
+    "gulp": "*",
+    "gulp-load-plugins": "*",
+    "gulp-shell": "*",
+    "html-loader": "*",
+    "html-webpack-plugin": "*",
+    "jasmine-core": "*",
+    "karma": "*",
+    "karma-coverage": "*",
+    "karma-coveralls": "*",
+    "karma-jasmine": "*",
+    "karma-junit-reporter": "*",
+    "karma-mocha-reporter": "*",
+    "karma-phantomjs-launcher": "*",
+    "karma-sourcemap-loader": "*",
+    "karma-webpack": "*",
+    "null-loader": "*",
+    "raw-loader": "*",
+    "rimraf": "*",
+    "run-sequence": "*",
+    "style-loader": "*",
+    "ts-loader": "*",
+    "tslint": "*",
+    "typescript": "*",
+    "typings": "*",
+    "webpack": "*",
+    "webpack-dev-server": "*",
+    "webpack-merge": "*"
   },
   "license": "Apache-2.0"
 }
