--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,13 @@ typings
 # =======
 .idea
 .vscode
+
+# Package Files #
+*.jar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# Maven
+target/
+junit/
