--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ng2-nvd3": "^1.1.3",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
+    "tether": "^1.4.0",
     "ts-loader": "^0.9.4",
     "typescript": "^2.0.3",
     "webpack-merge": "^0.15.0",
