--- a/circle.yml
+++ b/circle.yml
@@ -20,12 +20,14 @@ dependencies:
   override:
     - sudo apt-get install xsltproc
     - ./build-support/go-offline.sh
+    - ./mvnw frontend:install-node-and-npm frontend:npm 
 
 test:
   post:
     # parameters used during release
-    - git config user.name "$GH_USER"
-    - git config user.email "$GH_USER_EMAIL"
+    # allocate commits to CI, not the owner of the deploy key
+    - git config user.name "zipkinci"
+    - git config user.email "zipkinci+zipkin-dev@googlegroups.com"
     # setup https authentication credentials, used by ./mvnw release:prepare
     - git config credential.helper "store --file=.git/credentials"
     - echo "https://$GH_TOKEN:@github.com" > .git/credentials
