--- a/package.json
+++ b/package.json
@@ -15,36 +15,38 @@
     "test": "karma start"
   },
   "dependencies": {
-    "@angular/common": "2.4.0",
-    "@angular/compiler": "2.4.0",
-    "@angular/core": "2.4.0",
-    "@angular/forms": "2.4.0",
-    "@angular/http": "2.4.0",
-    "@angular/platform-browser": "2.4.0",
-    "@angular/platform-browser-dynamic": "2.4.0",
-    "@angular/router": "3.4.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.14",
-    "font-awesome": "~4.7.0",
+    "@angular/common": "2.4.10",
+    "@angular/compiler": "2.4.10",
+    "@angular/core": "2.4.10",
+    "@angular/forms": "2.4.10",
+    "@angular/http": "2.4.10",
+    "@angular/platform-browser": "2.4.10",
+    "@angular/platform-browser-dynamic": "2.4.10",
+    "@angular/router": "3.4.10",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.21",
     "angular2-fontawesome": "^0.8.0",
-    "bootstrap": "^4.0.0-alpha.5",
+    "bootstrap": "^4.0.0-alpha.6",
     "concurrently": "^3.1.0",
     "core-js": "^2.4.0",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.27.3",
     "dagre": "^0.7.4",
     "dagre-d3": "^0.4.17",
-    "file-loader": "^0.9.0",
+    "file-loader": "^0.10.1",
+    "font-awesome": "~4.7.0",
     "jquery": "^2.2.4",
     "karma": "^1.3.0",
     "karma-jasmine": "^1.0.2",
     "karma-junit-reporter": "^2.0.0",
     "linq-es5": "^1.11.2",
+    "moment": "^2.18.0",
     "ng2-nvd3": "^1.1.3",
+    "raw-loader": "^0.5.1",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.1",
     "tether": "^1.4.0",
     "ts-loader": "^0.9.4",
     "typescript": "^2.0.3",
-    "webpack-merge": "^0.15.0",
+    "webpack-merge": "^4.1.0",
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
