--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "jasmine-core": "^2.5.2",
+    "json-loader": "^0.5.4",
     "karma": "^1.5.0",
     "karma-coverage": "^1.1.1",
     "karma-coveralls": "^1.1.2",
