--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@angular/platform-browser-dynamic": "2.4.0",
     "@angular/router": "3.4.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.14",
-    "font-awesome": "~4.7.0",
     "angular2-fontawesome": "^0.8.0",
     "bootstrap": "^4.0.0-alpha.5",
     "concurrently": "^3.1.0",
@@ -33,17 +32,20 @@
     "dagre": "^0.7.4",
     "dagre-d3": "^0.4.17",
     "file-loader": "^0.9.0",
+    "font-awesome": "~4.7.0",
     "jquery": "^2.2.4",
     "karma": "^1.3.0",
     "karma-jasmine": "^1.0.2",
     "karma-junit-reporter": "^2.0.0",
     "linq-es5": "^1.11.2",
+    "moment": "^2.18.0",
     "ng2-nvd3": "^1.1.3",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.1",
     "tether": "^1.4.0",
     "ts-loader": "^0.9.4",
     "typescript": "^2.0.3",
+    "webpack": "^2.1.0-beta.22",
     "webpack-merge": "^0.15.0",
     "zone.js": "^0.7.4"
   },
@@ -59,6 +61,7 @@
     "html-loader": "*",
     "html-webpack-plugin": "*",
     "jasmine-core": "*",
+    "json-loader": "^0.5.4",
     "karma": "*",
     "karma-coverage": "*",
     "karma-coveralls": "*",
@@ -77,7 +80,7 @@
     "tslint": "*",
     "typescript": "*",
     "typings": "*",
-    "webpack": "*",
+    "webpack": "^2.1.0-beta.22",
     "webpack-dev-server": "*",
     "webpack-merge": "*"
   },
