--- a/package.json
+++ b/package.json
@@ -26,62 +26,51 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.21",
     "angular2-fontawesome": "^0.8.0",
     "bootstrap": "^4.0.0-alpha.6",
-    "concurrently": "^3.1.0",
-    "core-js": "^2.4.0",
-    "css-loader": "^0.27.3",
     "dagre": "^0.7.4",
     "dagre-d3": "^0.4.17",
-    "file-loader": "^0.10.1",
     "font-awesome": "~4.7.0",
     "jquery": "^2.2.4",
-    "karma": "^1.3.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-junit-reporter": "^2.0.0",
     "linq-es5": "^1.11.2",
     "moment": "^2.18.0",
     "ng2-nvd3": "^1.1.3",
-    "raw-loader": "^0.5.1",
-    "reflect-metadata": "0.1.3",
     "rxjs": "5.0.1",
-    "tether": "^1.4.0",
-    "ts-loader": "^0.9.4",
-    "typescript": "^2.0.3",
-    "webpack-merge": "^4.1.0",
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
-    "codelyzer": "*",
-    "concurrently": "*",
-    "css-loader": "*",
-    "extract-text-webpack-plugin": "*",
-    "file-loader": "*",
-    "gulp": "*",
-    "gulp-load-plugins": "*",
-    "gulp-shell": "*",
-    "html-loader": "*",
-    "html-webpack-plugin": "*",
-    "jasmine-core": "*",
-    "karma": "*",
-    "karma-coverage": "*",
-    "karma-coveralls": "*",
-    "karma-jasmine": "*",
-    "karma-junit-reporter": "*",
-    "karma-mocha-reporter": "*",
-    "karma-phantomjs-launcher": "*",
-    "karma-sourcemap-loader": "*",
-    "karma-webpack": "*",
-    "null-loader": "*",
-    "raw-loader": "*",
-    "rimraf": "*",
-    "run-sequence": "*",
-    "style-loader": "*",
-    "ts-loader": "*",
-    "tslint": "*",
-    "typescript": "*",
-    "typings": "*",
-    "webpack": "*",
-    "webpack-dev-server": "*",
-    "webpack-merge": "*"
+    "codelyzer": "^3.0.0-beta.4",
+    "concurrently": "^3.4.0",
+    "css-loader": "^0.27.3",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
+    "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-shell": "^0.6.3",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.5.0",
+    "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2",
+    "karma-jasmine": "^1.1.0",
+    "karma-junit-reporter": "^2.0.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
+    "null-loader": "^0.1.1",
+    "raw-loader": "^0.5.1",
+    "reflect-metadata": "0.1.3",
+    "rimraf": "^2.6.1",
+    "run-sequence": "^1.2.2",
+    "style-loader": "^0.16.0",
+    "tether": "^1.4.0",
+    "ts-loader": "^0.9.5",
+    "tslint": "^4.5.1",
+    "typescript": "^2.2.1",
+    "typings": "^2.1.0",
+    "webpack": "^2.3.1",
+    "webpack-dev-server": "^2.4.2",
+    "webpack-merge": "^4.1.0"
   },
   "license": "Apache-2.0"
 }
