--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postinstall": "typings install",
     "test": "karma start"
   },
+  "//": "specify the ng-bootstrap version to '1.0.0-alpha.24'(the lastest version supportted by angular2), because the newer version need angular4 support.",
   "dependencies": {
     "@angular/common": "2.4.10",
     "@angular/compiler": "2.4.10",
@@ -23,7 +24,7 @@
     "@angular/platform-browser": "2.4.10",
     "@angular/platform-browser-dynamic": "2.4.10",
     "@angular/router": "3.4.10",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.21",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.24",
     "angular2-fontawesome": "^0.8.0",
     "bootstrap": "3.3.7",
     "dagre": "^0.7.4",
